BFA-1343 - Fixed error tool tip z-index issue

--- a/src/_modal.scss
+++ b/src/_modal.scss
@@ -19,7 +19,15 @@ body.modal-open::-webkit-scrollbar {
 .modal-backdrop.show {
   opacity: 0.8 !important;
 }
-
+.modal-backdrop {
+  position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 1060 !important;
+    background-color: #000;
+}
 .position-bottom {
   .modal-content {
     position: absolute !important;
